# hrajezasedneskasparta.cz

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
templates/: index.jinja.html
